--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -6,9 +6,9 @@ jobs:
     steps:
       - name: flatpak
         run: |
-          sudo add-apt-repository ppa:alexlarsson/flatpak
-          sudo apt update
-          sudo apt install flatpak
+          sudo add-apt-repository -r ppa:alexlarsson/flatpak
+          sudo apt update -q
+          sudo apt install flatpak -q
           git config --global protocol.file.allow always                      
           git config --global protocol.allow always                                
           flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
